--- a/lib/st/stm32f1xx/STM32F1xx_HAL_Driver/Src/CMakeLists.txt
+++ b/lib/st/stm32f1xx/STM32F1xx_HAL_Driver/Src/CMakeLists.txt
@@ -6,7 +6,7 @@
 #        which is the required name of the file CMake looks for:
 cmake_minimum_required(VERSION 3.1)
 
-set(C_SOURCE_FILES "stm32f1xx_hal_cortex.c;stm32f1xx_hal_flash_ex.c;stm32f1xx_hal_flash.c;stm32f1xx_ll_utils.c;stm32f1xx_ll_rcc.c;stm32f1xx_ll_gpio.c;stm32f1xx_ll_usart.c;stm32f1xx_ll_spi.c")
+set(C_SOURCE_FILES "stm32f1xx_ll_utils.c;stm32f1xx_ll_rcc.c;stm32f1xx_ll_gpio.c")
 set(TARGET_LIB_NAME stlib)
 
 add_library(${TARGET_LIB_NAME} STATIC ${C_SOURCE_FILES})
