--- a/arch/stm32f103xx/CMakeLists.txt
+++ b/arch/stm32f103xx/CMakeLists.txt
@@ -22,3 +22,4 @@ endforeach(SUB_DIRECTORY)
 
 # add c files
 set(C_SOURCE_FILES ${C_SOURCE_FILES} ${C_FILES} PARENT_SCOPE)
+set(G_SOURCE_INCLUDE_DIRS ${G_SOURCE_INCLUDE_DIRS} "${CMAKE_CURRENT_SOURCE_DIR}/include" PARENT_SCOPE)
