--- a/arch/stm32f103xx/board/CY000001/CMakeLists.txt
+++ b/arch/stm32f103xx/board/CY000001/CMakeLists.txt
@@ -15,4 +15,5 @@ if("${BOARD_NAME}" STREQUAL "CY000001")
     filter_out(FILES_OUT FILES FILES)
 
     set(C_SOURCE_FILES ${C_SOURCE_FILES} ${FILES} ${ASM_FILES} PARENT_SCOPE)
+    set(G_SOURCE_INCLUDE_DIRS ${G_SOURCE_INCLUDE_DIRS} "${CMAKE_CURRENT_SOURCE_DIR}/include" PARENT_SCOPE)
 endif()
