<Add>: 增加printk驱动，启动时打印版权信息

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ set(C_SOURCE_LIBS)
 if("${BOARD_NAME}" STREQUAL "CY000001")
     add_subdirectory(arch/stm32f103xx)
     add_subdirectory(bsp/CY000001)
+    add_subdirectory(common)
     add_subdirectory(lib/st/stm32f1xx/STM32F1xx_HAL_Driver/Src)
 endif()
 # add_subdirectory(components)
