<Add>: 增加编译lwip组件的CMake管理文件, 项目编译通过但未测试

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ if("${BOARD_NAME}" STREQUAL "CY000001")
     add_subdirectory(common)
     add_subdirectory(lib/st/stm32f1xx/STM32F1xx_HAL_Driver/Src)
 endif()
-# add_subdirectory(components)
+add_subdirectory(components/lwip)
 add_subdirectory(driver)
 add_subdirectory(src)
 # add_subdirectory(utils)
